# KMamiz

./: .env  BUILD.md  Dockerfile  README.md  build-prod.sh  build-without-buildkit.sh  build.sh  index.ts  package-lock.json  package.json  tsconfig.json
deploy/: .gitignore  README-DP.md  README.md  kmamiz-demo-mongodb.yaml  kmamiz-rbac.yaml  kmamiz-rust-sample.yaml  kmamiz-rust.yaml  kmamiz-sample.yaml  kmamiz-vs.yaml  kmamiz.yaml  mongo-init.js
docs/: API.md  ARCHITECTURE.md  ENVIRONMENT.md
envoy/: .gitignore  EnvoyFilter-Info.yaml  EnvoyFilter-WASM.example.yaml  EnvoyFilter-WASM.yaml  EnvoyFilter-Warning.yaml  README.md
envoy/wasm/: Dockerfile  README.md  (+5 more)
kmamiz_data_processor/: .env  Cargo.toml  Dockerfile  README.md  build.sh
kmamiz_data_processor/src/: data_processor.rs  env.rs  http_client.rs  json_utils.rs  main.rs
kmamiz_data_processor/src/data/: base.rs  combined_realtime_data.rs  connection_package.rs  endpoint_data_type.rs  endpoint_dependency.rs  endpoint_info.rs  envoy_log.rs  historical_data.rs  mod.rs  namespace_list.rs  pod_list.rs  realtime_data.rs  record.rs  replica_count.rs  request_type.rs  service_list.rs  trace.rs
kmamiz_data_processor/src/http_client/: kubernetes.rs  log_matcher.rs  mod.rs  url_matcher.rs  zipkin.rs
src/: GlobalSettings.ts
tests/: AggregateData.test.ts  CombinedRealtimeDataList.test.ts  DataAggregator.test.ts  DataTransformer.test.ts  EndpointDataType.test.ts  EndpointDependencies.test.ts  EndpointUtils.test.ts  EnvoyLog.test.ts  MockData.ts  MockData2.ts  RealtimeDataList.test.ts  Traces.test.ts  Utils.test.ts
(+136 files in other folders)
