[package]
name = "kmamiz_data_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "default-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
regex = "1"
chrono = "0.4.24"
